adicionado um menu lateral, a intenção é que ele seja o acesso à todas as funcionalidades da plataforma

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ button:hover {
   --corJanela: #F4F4FF;
   --backgroundjanela: #D4DBED;
   --bordaCor: #a7abb5;
+  --textoCor: #727376;
   --azulDestaque: #0A1E3F;
   --azulMaisEscuro: #000c1f;
 }
