--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -1,7 +1,27 @@
 .dashboardMain {
-    background-color: var(--backgroundjanela);
+    background-color: var(--corJanela);
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
     display: flex;
+    /* padding: 10px; */
+}
+
+.principalDash {
+    flex: 1;
+    background-color: var(--backgroundjanela);
+}
+
+.superiorDash {
+    background-color: var(--corJanela);
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    border-bottom: solid 1px var(--bordaCor);
+}
+
+@media (max-width: 700px) {
+    .dashboardMain {
+        flex-direction: column;
+    }
 }
