--- a/src/pages/styles/menuLateral.css
+++ b/src/pages/styles/menuLateral.css
@@ -8,6 +8,10 @@
     border-right: solid 1px var(--bordaCor);
 }
 
+.botaoMenu {
+    display: none;
+}
+
 .menuLateralDiv .logoAux {
     height: 30px;
     justify-content: left;
@@ -22,14 +26,14 @@
 }
 
 .menuLateral {
-    /* background-color: var(--backgroundjanela); */
+    /* background-color: rebeccapurple; */
     margin-top: 10px;
     display: flex;
     flex: 1;
     flex-direction: column;
     /* padding: 10px; */
     box-sizing: border-box;
-    gap: 10px;
+    gap: 8px;
     border-radius: 10px;
     /* border: solid 1px var(--bordaCor); */
 }
@@ -74,6 +78,38 @@
 
 @media (max-width: 700px) {
     .menuLateralDiv {
-        width: 50%;
+        display: none;
+    }
+
+    .botaoMenu {
+        display: block;
+        /* position: absolute; */
+        /* margin: 10px; */
+        margin-top: 10px;
+        margin-left: 10px;
+        width: 60px;
+        background-color: var(--backgroundjanela);
+        color: var(--azulDestaque);
+        font-weight: bold;
+        border: solid 2px var(--azulDestaque);
+        /* top: 10px;
+        left: 10px; */
+    }
+
+    .botaoMenu:hover {
+        border: solid 2px var(--azulDestaque);
+        color: var(--corJanela);
+        background-color: var(--azulDestaque);
+    }
+
+    .menuMobile {
+        display: flex;
+        position: absolute;
+        width: 60%;
+        top: 60px;
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+        border: solid 1px var(--bordaCor);
     }
 }
