tentativa de pequeno ajuste do layout para considerar a janela do navegador

--- a/src/pages/styles/login.css
+++ b/src/pages/styles/login.css
@@ -5,7 +5,7 @@
     margin: 0;
     box-sizing: border-box;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
 }
 
 .gradienteLogin {
@@ -20,7 +20,7 @@
 .janelaLogin {
     background-color: var(--corJanela);
     width: 40%;
-    height: 100vh;
+    height: 100dvh;
     box-sizing: border-box;
     padding: 10px;
     display: flex;
