--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -1,7 +1,7 @@
 .dashboardMain {
     background-color: var(--corJanela);
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     box-sizing: border-box;
     display: flex;
     /* padding: 10px; */
