--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -4,12 +4,18 @@
     height: 100dvh;
     box-sizing: border-box;
     display: flex;
+    /* overflow: hidden; */
     /* padding: 10px; */
 }
 
 .principalDash {
+    display: flex;
+    flex-direction: column;
     flex: 1;
+    width: 100%;
+    /* height: 100%; */
     background-color: var(--backgroundjanela);
+    box-sizing: border-box;
 }
 
 .superiorDash {
@@ -20,8 +26,146 @@
     border-bottom: solid 1px var(--bordaCor);
 }
 
-@media (max-width: 700px) {
+.blocosDash {
+    /* background-color: gray; */
+    /* height: 100%; */
+    flex: 1;
+    /* height: 100%; */
+    box-sizing: border-box;
+    /* display: flex;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    /* grid-template-rows: minmax(100px, 250px);*/
+    grid-auto-rows: 100px;
+    gap: 20px;
+    padding: 20px;
+    overflow-y: auto;
+}
+
+.bloco {
+    background-color: var(--corJanela);
+    border-radius: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    grid-column: span 1;
+    grid-row: span 1;
+}
+
+.inforOcorrenciasHora {
+    grid-column: span 3;
+    grid-row: span 2;
+}
+
+.distribuicaoPorCamera {
+    grid-column: span 2;
+    grid-row: span 3;
+}
+
+.analiseEstatistica {
+    grid-column: span 2;
+}
+
+.ocorrenciasPorTipo {
+    grid-column: span 2;
+    grid-row: span 3;
+}
+
+.ultimasOcorrencias {
+    grid-column: span 3;
+    grid-row: span 2;
+}
+
+.historicoCompleto {
+    grid-column: span 5;
+    grid-row: span 3;
+}
+
+@media (max-width: 1200px) {
+    .blocosDash {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-auto-rows: 100px;
+    }
+}
+
+@media (max-width: 1000px) {
+
     .dashboardMain {
         flex-direction: column;
     }
+
+    /* .blocosDash {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-auto-rows: 150px;
+    } */
+
+    .inforOcorrenciasHora {
+        grid-column: span 3;
+        grid-row: span 2;
+    }
+
+    .distribuicaoPorCamera {
+        grid-column: span 3;
+        grid-row: span 3;
+    }
+
+    .analiseEstatistica {
+        grid-column: span 3;
+    }
+
+    .falsosPositivos {
+        grid-column: span 3;
+    }
+
+    .ocorrenciasPorTipo {
+        grid-column: span 3;
+        grid-row: span 3;
+    }
+
+    .ultimasOcorrencias {
+        grid-column: span 3;
+        grid-row: span 2;
+    }
+
+    .historicoCompleto {
+        grid-column: span 3;
+        grid-row: span 3;
+    }
+
+    .cameraCritica {
+        grid-column: span 2;
+    }
+
+    .blocosDash {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-auto-rows: 150px;
+    }
 }
+
+@media (max-width: 600px) {
+    .blocosDash {
+        grid-template-columns: 1fr;
+    }
+
+    .inforOcorrenciasHora,
+    .distribuicaoPorCamera,
+    .analiseEstatistica,
+    .falsosPositivos,
+    .ocorrenciasPorTipo,
+    .ultimasOcorrencias,
+    .historicoCompleto,
+    .cameraCritica {
+        grid-column: span 1;
+    }
+}
+
+/* @media (max-width: 700px) {
+    .cameraCritica {
+        grid-column: span 2;
+    }
+
+    .blocosDash {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-auto-rows: 150px;
+    }
+} */
