--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,11 @@ h2 {
   padding: 0;
 }
 
+hr {
+  color: var(--azulDestaque);
+  width: 100%;
+}
+
 input {
   padding: 5px;
   border-radius: 10px;
