--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -50,6 +50,27 @@
     box-sizing: border-box;
     grid-column: span 1;
     grid-row: span 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+.tituloBloco {
+    font-weight: bold;
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: clamp(12px, 2vw, 14px);
+}
+
+.bloco .auxiliarGrafico {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    width: 100%;
+    height: 80%;
+    /* background-color: gray; */
 }
 
 .inforOcorrenciasHora {
@@ -64,11 +85,16 @@
 
 .analiseEstatistica {
     grid-column: span 2;
+    grid-row: span 2;
+}
+
+.falsosPositivos {
+    grid-row: span 2;
 }
 
 .ocorrenciasPorTipo {
     grid-column: span 2;
-    grid-row: span 3;
+    grid-row: span 4;
 }
 
 .ultimasOcorrencias {
@@ -138,13 +164,14 @@
 
     .blocosDash {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-auto-rows: 150px;
+        grid-auto-rows: 100px;
     }
 }
 
 @media (max-width: 600px) {
     .blocosDash {
         grid-template-columns: 1fr;
+        grid-auto-rows: 100px;
     }
 
     .inforOcorrenciasHora,
