--- a/src/pages/styles/menuLateral.css
+++ b/src/pages/styles/menuLateral.css
@@ -105,6 +105,7 @@
     .menuMobile {
         display: flex;
         position: absolute;
+        z-index: 1000;
         width: 60%;
         top: 60px;
         border-bottom-right-radius: 10px;
