--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -116,12 +116,39 @@
 }
 
 .tabelaUltimasOcorrencias th {
-    padding: 2px;
+    padding: 5px 0px;
+    /* background-color: aqua; */
+}
+
+.tabelaUltimasOcorrencias td {
+    padding: 5px 0px;
 }
 
 .historicoCompleto {
     grid-column: span 5;
     grid-row: span 3;
+    overflow: auto;
+}
+
+.naoConfirmado {
+    background-color: red;
+    color: white;
+    margin: 0px 3px;
+    border-radius: 4px;
+}
+
+.analise {
+    background-color: darkorange;
+    color: white;
+    margin: 0px 3px;
+    border-radius: 4px;
+}
+
+.confirmado {
+    background-color: green;
+    color: white;
+    margin: 0px 3px;
+    border-radius: 4px;
 }
 
 @media (max-width: 1200px) {
@@ -211,6 +238,17 @@
 }
 
 @media (max-width: 720px) {
+
+    .historicoCompleto {
+        justify-content: left;
+        align-items: first baseline;
+    }
+
+    .historicoCompleto .tabelaUltimasOcorrencias {
+        width: 200%;
+    }
+
+
     .blocosDash {
         grid-template-columns: 1fr;
         grid-auto-rows: 100px;
