--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @font-face {
   font-family: 'OpenSans';
+  /* src: url('../public/fonts/OpenSans-VariableFont_wdth\,wght.ttf'); */
   src: url('../public/fonts/OpenSans-VariableFont_wdth\,wght.ttf');
   font-weight: 400;
   font-style: normal;
@@ -8,7 +9,11 @@
 
 @font-face {
   font-family: 'Roboto';
+  /* src: url('../public/fonts/Roboto-VariableFont_wdth\,wght.ttf'); */
   src: url('../public/fonts/Roboto-VariableFont_wdth\,wght.ttf');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 
 
@@ -32,6 +37,8 @@ h1,
 h2 {
   margin: 0;
   padding: 0;
+  /* font-weight: bolder; */
+  font-family: 'Roboto Black';
 }
 
 hr {
