--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   font-family: 'OpenSans';
   /* src: url('../public/fonts/OpenSans-VariableFont_wdth\,wght.ttf'); */
   src: url('../public/fonts/OpenSans-VariableFont_wdth\,wght.ttf');
-  font-weight: 400;
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
@@ -11,7 +11,7 @@
   font-family: 'Roboto';
   /* src: url('../public/fonts/Roboto-VariableFont_wdth\,wght.ttf'); */
   src: url('../public/fonts/Roboto-VariableFont_wdth\,wght.ttf');
-  font-weight: 400;
+  font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
@@ -34,11 +34,19 @@ body {
 
 p,
 h1,
-h2 {
+h2,
+h3,
+h4 {
   margin: 0;
   padding: 0;
   /* font-weight: bolder; */
-  font-family: 'Roboto Black';
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-weight: bolder;
 }
 
 hr {
