--- a/src/pages/styles/dashboard.css
+++ b/src/pages/styles/dashboard.css
@@ -73,6 +73,15 @@
     /* background-color: gray; */
 }
 
+.botaoVerImagem {
+    width: 90%;
+    /* background-color: var(--bordaCor); */
+    /* border: none; */
+    border-radius: 5px;
+    padding: 2px;
+    font-weight: bold;
+}
+
 .inforOcorrenciasHora {
     grid-column: span 3;
     grid-row: span 2;
